--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ envlist =
     pydocstyle
     pypi-description
     towncrier
-    py{3.8}
+    py{3.10}
 skip_missing_interpreters = true
 skipsdist = True
 
@@ -45,7 +45,7 @@ skip_install = true
 [testenv:black]
 commands =
     {envpython} -m black --check --diff .
-deps = black==21.10b0
+deps = black==22.3.0
 skip_install = true
 
 [testenv:blacken]
