--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ elasticsearch = {extras = ["async"], version = "^7.15.0"}
 python-dotenv = "^0.19.1"
 uvicorn = "^0.17.0"
 typer = "^0.4.0"
+ujson = "~=5.3.0"
 
 [tool.poetry.dev-dependencies]
 invoke = "^1.6.0"
@@ -23,7 +24,7 @@ livereload = "^2.6.3"
 pytest = "^6.2.5"
 pytest-asyncio = "^0.16.0"
 pytest-cov = "^2.10.1"
-httpx = "^0.20.0"
+httpx = "^0.23.0"
 pytest-xdist = "^2.4.0"
 coveralls = "^2.1.2"
 trio = "^0.19.0"
