--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ license = "BSD"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = {extras = ["all"], version = "^0.78.0"}
-elasticsearch-dsl = "^7.4.0"
-elasticsearch = {extras = ["async"], version = "^7.15.0"}
+fastapi = {extras = ["all"], version = "^0.95.2"}
+elasticsearch-dsl = "^7.4.1"
+elasticsearch = {version = "<8", extras = ["async"]}
 python-dotenv = "^0.19.1"
 uvicorn = "^0.17.0"
 typer = "^0.4.0"
@@ -63,3 +63,22 @@ verbose = 0
 quiet = false
 whitelist-regex = []
 color = true
+
+[tool.isort]
+profile = "black"
+combine_as_imports = true
+default_section = "THIRDPARTY"
+force_grid_wrap = 0
+include_trailing_comma = true
+known_first_party = "knocker"
+line_length = 119
+multi_line_output = 3
+use_parentheses = true
+
+[tool.ruff]
+ignore = []
+line-length = 119
+target-version = "py310"
+
+[tool.ruff.mccabe]
+max-complexity = 10
