--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist =
     black
     docs
     isort
-    pep8
+    ruff
     pydocstyle
     pypi-description
     towncrier
@@ -66,25 +66,14 @@ commands =
 deps = {[testenv:isort]deps}
 skip_install = true
 
-[testenv:pep8]
+[testenv:ruff]
 commands =
-    {envpython} -m flake8
-    {envpython} -m interrogate -c pyproject.toml book_search tests
+    {envpython} -m ruff check book_search tests {posargs}
+    {envpython} -minterrogate -c pyproject.toml book_search tests
 deps =
     interrogate
-    flake8~=3.9.2
-    flake8-broken-line
-    flake8-bugbear
-    flake8-builtins
-    flake8-coding
-    flake8-commas
-    flake8-comprehensions
-    flake8-eradicate
-    flake8-quotes
-    flake8-tidy-imports
-    pep8-naming
+    ruff
 skip_install = true
-
 
 [testenv:pydocstyle]
 commands = {envpython} -mpydocstyle book_search
@@ -95,12 +84,12 @@ skip_install = true
 [testenv:pypi-description]
 commands =
     {envpython} -m invoke clean
-    {envpython} -m pep517.build .
+    {envpython} -m build .
     {envpython} -m twine check dist/*
 deps =
     invoke
     check-manifest
-    pep517
+    build
     twine
 skip_install = true
 
@@ -114,7 +103,7 @@ skip_install = true
 [testenv:release]
 commands =
     {envpython} -m invoke clean
-    {envpython} -m pep517.build .
+    {envpython} -m build .
     {envpython} -m twine upload {posargs} dist/*
 deps = {[testenv:pypi-description]deps}
 passenv =
